--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@ function checkPass() {
                  checkAdmin();
 		 setInterval(checkRank, 50);
                  setInterval(changeName, 50);
-		   if (localStorage.purchases.includes("!!has89:true!!")) {  
+		   if (localStorage.purchases.includes("!!has89le:true!!")) {  
 				document.cookie = "has89=true";
 		       } else {
 		       		document.getElementById('89').remove();	 
