--- a/check-out-ti-points.html
+++ b/check-out-ti-points.html
@@ -14,7 +14,7 @@
 	<a href="check-out-ti-settings.html"><img draggable=false id="gears-icon" style="padding:50px;" width=50px src="gears.png"></a>
 </div><br><br><br><br><br>
 	<h1><b>TiPoints</b></h1>
-	<p>On this page you can earn TiPoints by watching ads, and pledging TI.<br />You can use them to buy VIT (Very Important TIer) or MVT (Most Valubale TIer) status.<br /> These can make your name be written in bright colors when you post. (If you buy both you're name is written in a mix of the two!)<br /> TiPoints can also be spend to buy limited edition virtual calculators, which could later be sold for more. </p>
+	<p>On this page you can earn TiPoints by watching ads, and pledging TI.<br />You can use them to buy VIT (Very Important TIer) or MVT (Most Valubale TIer) status.<br /> These can make your name be written in bright colors when you post. (If you buy both you're name is written in a mix of the two!)<br /> TiPoints can also be spent on limited edition virtual calculators, which can later be sold for more. </p>
  </center>
  </body>
  <style>
