--- a/points.html
+++ b/points.html
@@ -19,7 +19,9 @@
  <input type="text" id="pledge" placeholder="Type the pledge here."><br>
  <h3>Store</h3>
 <img onclick="buyVit();" width=200px src="http://i.imgur.com/m5ITKZ0.png">
+<img onclick="buyLimited();" width=200px src="http://i.imgur.com/S9N77kQ.png">
 <img onclick="buyMvt();" width=200px src="http://i.imgur.com/bsGBadI.png"><br>
+	<span style="color:red">Going offsale soon!</span>
 	<div style="visibility:hidden;" id="HCB_comment_box"><a href="http://www.htmlcommentbox.com">Comment Form</a> is loading comments...</div>
  <link rel="stylesheet" type="text/css" href="//www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
  <script type="text/javascript" id="hcb"> /*<!--*/ if(!window.hcb_user){hcb_user={};} (function(){var s=document.createElement("script"), l=hcb_user.PAGE || (""+window.location).replace(/'/g,"%27"), h="//www.htmlcommentbox.com";s.setAttribute("type","text/javascript");s.setAttribute("src", h+"/jread?page="+encodeURIComponent(l).replace("+","%2B")+"&opts=16862&num=50&ts=1495572466451");if (typeof s!="undefined") document.getElementsByTagName("head")[0].appendChild(s);})(); /*-->*/ </script>
@@ -79,14 +81,14 @@ if (Number(localStorage.points) > 2499) {
 }
 
 function buyLimited() {
-if (localStorage.purchases.includes("!!has89le:true!!")) {
+if (localStorage.purchases.includes("!!has92plusle:true!!")) {
  alert("Already purchased.");
 } else {
 if (Number(localStorage.points) > 2499) {
-    var r = confirm("Would you like to buy (LIMITED EDITION) TI-89 Virtual Calculator for 100 TiPoints?");
+    var r = confirm("Would you like to buy (LIMITED EDITION) TI-92 PLUS Virtual Calculator for 100 TiPoints?");
     if (r == true) {
      localStorage.setItem("points", Number(localStorage.points - 100));
-   localStorage.purchases = localStorage.purchases + "!!has89le:true!!";
+   localStorage.purchases = localStorage.purchases + "!!has92plusle:true!!";
        alert("Purchase successful."); 
        location.reload();  
     }
