--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
  <img width=190px src="http://s7d1.scene7.com/is/image/officedepot/905739_scene7?$OD-Dynamic$&wid=450&hei=450">
  <img width=190px src="http://www.staples-3p.com/s7/is/image/Staples/m000916946_sc7?$splssku$"><br>
  <img id="89" src="http://ti.zewaren.net/en/images/calc-ti89.gif">
+ <img id="92plus" src="http://www.ticalc.org/images/calcs/92plus-big.gif">
 </div>
 <!-- start Feedback -->
 <script data-sil-id='591367bea43fd60015db241c'> (function() {var d = document, w = window, l = window.location,p = l.protocol == 'file:' ? 'http://' : '//';if (!w.WS) w.WS = {}; c = w.WS;var m=function(t, o){  var e = d.getElementsByTagName('script'); e=e[e.length-1];  var n = d.createElement(t); if (t=='script') {n.async=true;} for (k in o) n[k] = o[k];  e.parentNode.insertBefore(n, e)};   m('script', {      src: p+'bawkbox.com/widget/feedback/591367bea43fd60015db241c?page='+encodeURIComponent(l+''),      type: 'text/javascript'  });  c.load_net = m;})();</script><div class='sil-widget-feedback sil-widget' id='sil-widget-591367bea43fd60015db241c'<a href='https://bawkbox.com/install/feedback'>Feedback is loading...</a></div>
@@ -214,7 +215,11 @@ function checkPass() {
 		       } else {
 		       		document.getElementById('89').remove();	 
 		       }
-                 
+                 	if (localStorage.purchases.includes("!!has92plusle:true!!")) {  
+				document.cookie = "has92plus=true";
+		       } else {
+		       		document.getElementById('92plus').remove();	 
+		       }
            }
  }
  </script>
