--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
  <img width=190px src="http://www.staples-3p.com/s7/is/image/Staples/m000916946_sc7?$splssku$"><br>
  <img id="89" src="http://ti.zewaren.net/en/images/calc-ti89.gif">
  <a href="https://www.ocf.berkeley.edu/~pad/emu/v11.html"><img id="92plus" src="http://www.ticalc.org/images/calcs/92plus-big.gif"></a>
+ <img id="nspirecxcas" src="https://images-na.ssl-images-amazon.com/images/I/71xGnSqQUsL._SY679_.jpg">
 </div>
 <!-- start Feedback -->
 <script data-sil-id='591367bea43fd60015db241c'> (function() {var d = document, w = window, l = window.location,p = l.protocol == 'file:' ? 'http://' : '//';if (!w.WS) w.WS = {}; c = w.WS;var m=function(t, o){  var e = d.getElementsByTagName('script'); e=e[e.length-1];  var n = d.createElement(t); if (t=='script') {n.async=true;} for (k in o) n[k] = o[k];  e.parentNode.insertBefore(n, e)};   m('script', {      src: p+'bawkbox.com/widget/feedback/591367bea43fd60015db241c?page='+encodeURIComponent(l+''),      type: 'text/javascript'  });  c.load_net = m;})();</script><div class='sil-widget-feedback sil-widget' id='sil-widget-591367bea43fd60015db241c'<a href='https://bawkbox.com/install/feedback'>Feedback is loading...</a></div>
@@ -221,6 +222,11 @@ function checkPass() {
 				document.cookie = "has92plus=true";
 		      } else {
 		       	document.getElementById('92plus').remove();	 
+		       }
+		   if (localStorage.purchases.includes("!!hasnspirecxcasle:true!!")) {  
+			document.cookie = "hasnspirecxcas=true";
+		       } else {
+		       		document.getElementById('nspirecxcas').remove();	 
 		       }
            } else {
 			   alert("Access denied. Get TIed!");
