--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
 <p id="modpanelnotice"></p>
 <div style="background-color:white;">
 <img width=175px src="https://images-na.ssl-images-amazon.com/images/I/71RH7Vj8FUL._SL1500_.jpg">
- <img width=85px src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4c/TI-nspire_CX_CAS.jpg/220px-TI-nspire_CX_CAS.jpg">
  <img width=150px src="https://images-na.ssl-images-amazon.com/images/I/A1p6HHnJWaL._SX466_.jpg">
  <img width=90px src="https://images-na.ssl-images-amazon.com/images/G/01/aplusautomation/vendorimages/0e74993e-8b04-4f99-a980-2437ad5c0728.jpg._CB283769908__SR150,300_.jpg">
  <img width=215px src="http://i258.photobucket.com/albums/hh259/kaspernova/84PCS-Pink.jpg">
@@ -41,7 +40,7 @@
  <img width=190px src="http://www.staples-3p.com/s7/is/image/Staples/m000916946_sc7?$splssku$"><br>
  <img id="89" src="http://ti.zewaren.net/en/images/calc-ti89.gif">
  <a href="https://www.ocf.berkeley.edu/~pad/emu/v11.html"><img id="92plus" src="http://www.ticalc.org/images/calcs/92plus-big.gif"></a>
- <img id="nspirecxcas" src="https://images-na.ssl-images-amazon.com/images/I/71xGnSqQUsL._SY679_.jpg">
+ <img id="nspirecxcas" width="200px" src="https://images-na.ssl-images-amazon.com/images/I/71xGnSqQUsL._SY679_.jpg">
 </div>
 <!-- start Feedback -->
 <script data-sil-id='591367bea43fd60015db241c'> (function() {var d = document, w = window, l = window.location,p = l.protocol == 'file:' ? 'http://' : '//';if (!w.WS) w.WS = {}; c = w.WS;var m=function(t, o){  var e = d.getElementsByTagName('script'); e=e[e.length-1];  var n = d.createElement(t); if (t=='script') {n.async=true;} for (k in o) n[k] = o[k];  e.parentNode.insertBefore(n, e)};   m('script', {      src: p+'bawkbox.com/widget/feedback/591367bea43fd60015db241c?page='+encodeURIComponent(l+''),      type: 'text/javascript'  });  c.load_net = m;})();</script><div class='sil-widget-feedback sil-widget' id='sil-widget-591367bea43fd60015db241c'<a href='https://bawkbox.com/install/feedback'>Feedback is loading...</a></div>
