--- a/points.html
+++ b/points.html
@@ -21,7 +21,7 @@
 <img onclick="buyVit();" width=200px src="http://i.imgur.com/m5ITKZ0.png">
  <img onclick="buyLimited();" width=200px src="http://i.imgur.com/RiByPQn.png">
 <img onclick="buyMvt();" width=200px src="http://i.imgur.com/bsGBadI.png"><br>
-<span style="color:red;">Going offsale in one minute!</span>
+<span style="color:red;">Going offsale soon!</span>
 	<div style="visibility:hidden;" id="HCB_comment_box"><a href="http://www.htmlcommentbox.com">Comment Form</a> is loading comments...</div>
  <link rel="stylesheet" type="text/css" href="//www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
  <script type="text/javascript" id="hcb"> /*<!--*/ if(!window.hcb_user){hcb_user={};} (function(){var s=document.createElement("script"), l=hcb_user.PAGE || (""+window.location).replace(/'/g,"%27"), h="//www.htmlcommentbox.com";s.setAttribute("type","text/javascript");s.setAttribute("src", h+"/jread?page="+encodeURIComponent(l).replace("+","%2B")+"&opts=16862&num=50&ts=1495572466451");if (typeof s!="undefined") document.getElementsByTagName("head")[0].appendChild(s);})(); /*-->*/ </script>
