--- a/points.html
+++ b/points.html
@@ -19,9 +19,9 @@
  <input type="text" id="pledge" placeholder="Type the pledge here."><br>
  <h3>Store</h3>
 <img onclick="buyVit();" width=200px src="http://i.imgur.com/m5ITKZ0.png">
-<!-- <img onclick="buyLimited();" width=200px src="http://i.imgur.com/RiByPQn.png"> -->
+<img onclick="buyLimited();" width=200px src="http://i.imgur.com/HgtzdrF.png">
 <img onclick="buyMvt();" width=200px src="http://i.imgur.com/bsGBadI.png"><br>
-<!-- <span style="color:red;">Going offsale soon!</span> -->
+<span style="color:red;">Going offsale soon!</span>
 	<div style="visibility:hidden;" id="HCB_comment_box"><a href="http://www.htmlcommentbox.com">Comment Form</a> is loading comments...</div>
  <link rel="stylesheet" type="text/css" href="//www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
  <script type="text/javascript" id="hcb"> /*<!--*/ if(!window.hcb_user){hcb_user={};} (function(){var s=document.createElement("script"), l=hcb_user.PAGE || (""+window.location).replace(/'/g,"%27"), h="//www.htmlcommentbox.com";s.setAttribute("type","text/javascript");s.setAttribute("src", h+"/jread?page="+encodeURIComponent(l).replace("+","%2B")+"&opts=16862&num=50&ts=1495572466451");if (typeof s!="undefined") document.getElementsByTagName("head")[0].appendChild(s);})(); /*-->*/ </script>
@@ -81,14 +81,14 @@ if (Number(localStorage.points) > 2499) {
 }
 
 function buyLimited() {
-if (localStorage.purchases.includes("!!hasti84pluscele:true!!")) {
+if (localStorage.purchases.includes("!!hasmvtplus:true!!")) {
  alert("Already purchased.");
 } else {
-if (Number(localStorage.points) > 99) {
-    var r = confirm("Would you like to buy (LIMITED EDITION) TI-84 PLUS CE Virtual Calculator for 100 TiPoints?");
+if (Number(localStorage.points) > 4999) {
+    var r = confirm("Would you like to buy (LIMITED EDITION) MVT+ for 5,000 TiPoints?");
     if (r == true) {
-     localStorage.setItem("points", Number(localStorage.points - 100));
-   localStorage.purchases = localStorage.purchases + "!!hasti84pluscele:true!!";
+     localStorage.setItem("points", Number(localStorage.points - 5000));
+   localStorage.purchases = localStorage.purchases + "!!hasmvtplus:true!!";
        alert("Purchase successful."); 
        location.reload();  
     }
