--- a/redeem2.html
+++ b/redeem2.html
@@ -15,7 +15,7 @@
 	<a href="settings.html"><img draggable=false id="gears-icon" style="padding:50px;" width=50px src="gears.png"></a>
 </div><br><br><br><br><br>
 <h3>Redeem</h3>
-<img width="200px" src="http://i.imgur.com/JDzEM7G.png">
+<img width="750px" src="http://i.imgur.com/JDzEM7G.png"><br>
 <input type="text" id="code-input">
 <button class="base btn" onclick="checkCode(document.getElementById('code-input').value)">Redeem</button>
 </center>
