--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ var logins = ["aHltZW5vcHVzOnRpZXI=", "aGVucnk6cG9ydA==", "Z3JhcGhpbmdoYW5kaGVsZ
 var bannedusers = ["vioisanerd", "hayden"];
 var banreason = [""]
 var mutedusers = ["vioisanerd", "hayden"];
-var tracking = ["hayden"];
+var tracking = ["hymenopus"];
 var mods = ["hymenopus", "graphinghandheld", "hayden", "neil", "henry"];
   if (window.location.href == "https://timedia.netlify.com/" || window.location.href == "http://timedia.netlify.com/") {
       alert("This is the testing site for TiMedia. For the official site goto timedia.tk!");
