--- a/settings.html
+++ b/settings.html
@@ -14,6 +14,7 @@
 	<a href="points.html"><img draggable=false id="money-icon" style="padding:50px;" width=50px src="money.png"></a>
 	<a href="settings.html"><img draggable=false id="gears-icon" style="padding:50px;" width=50px src="gears.png"></a>
 </div><br><br><br><br><br>
+	<h3>Admins are still working on this page!<br />Settings page coming soon!</h3>
  </center>
  </body>
 </html>
