--- a/settings.html
+++ b/settings.html
@@ -17,4 +17,9 @@
 	<h3>Admins are still working on this page!<br />Settings page coming soon!</h3>
  </center>
  </body>
+ <style>
+	h3 {
+		color: black;
+	 }
+ </style>
 </html>
