--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
  </div>
 <br><br>
 <div id="access" style="padding:35px;">
+	<!-- Start of adf.ly banner code -->
+<div style="width: 728px; text-align: center; font-family: verdana; font-size: 10px;"><a href="https://join-adf.ly/16956779"><img border="0" src="https://cdn.adf.ly/images/banners/adfly.728x90.1.gif" width="728" height="90" title="AdF.ly - shorten links and earn money!" /></a><br /><a href="https://join-adf.ly/16956779">Get paid to share your links!</a></div>
+<!-- End of adf.ly banner code --><br>
  <input placeholder="Username" id="username" type="text"><br>
  <input placeholder="Password" id="password" type="password"><br>
  <button class="base btn" onclick="checkPass()">Login!</button>
