--- a/watch-ads.html
+++ b/watch-ads.html
@@ -1,1 +1,24 @@
+<!DOCTYPE html>
+<html>
+<title>TiMedia</title>
+<link rel="stylesheet" type="text/css" href="style.css">
+<body>
+<center>
+<div class="top">
+ <h2 style="color:white;">TiMedia</h2>
+ </div>
+<br><br>
+ <div class="background" id="navbar">
+	<a href="index.html"><img draggable=false id="home-icon" style="padding:50px;" width=50px src="home.png"></a>
+	<a href="news.html"><img draggable=false id="news-icon" style="padding:50px;" width=50px src="news.png"></a>
+	<a href="points.html"><img draggable=false id="money-icon" style="padding:50px;" width=50px src="money.png"></a>
+	<a href="settings.html"><img draggable=false id="gears-icon" style="padding:50px;" width=50px src="gears.png"></a>
+</div><br><br><br><br><br>
+  <h3>Watch Ads!</h3>
+  <p>It will say that you need to update your browser. <br />It might say that 'your download is ready'.<br /><b>DO NOT CLICK START DOWNLOAD!!!</b><br />In the top left corner there will be a countdown. Wait until it's over, then click the yellow 'skip ad' button to collect your Ti Points.<br />If you love TI wait a bit longer than the countdown! We will make more money, and it all goes to Texas Insruments!</p>
+</center>
+<script>
 
+</script>
+</body>
+</html>
