--- a/watch-ads.html
+++ b/watch-ads.html
@@ -15,7 +15,7 @@
 	<a href="settings.html"><img draggable=false id="gears-icon" style="padding:50px;" width=50px src="gears.png"></a>
 </div><br><br><br><br><br>
   <h3>Watch Ads!</h3>
-  <p>It will say that you need to update your browser. <br />It might say that 'your download is ready'.<br /><b>DO NOT CLICK START DOWNLOAD!!!</b><br />In the top left corner there will be a countdown. Wait until it's over, then click the yellow 'skip ad' button to collect your Ti Points.<br />If you love TI wait a bit longer than the countdown! We will make more money, and it all goes to Texas Insruments!</p>
+  <p>It will say that you need to update your browser. It might say that 'your download is ready'.<br /><b>DO NOT CLICK START DOWNLOAD!!!</b><br />In the top left corner there will be a countdown. Wait until it's over, then click the yellow 'skip ad' button to collect your Ti Points.<br />If you love TI wait a bit longer than the countdown! We will make more money, and it all goes to Texas Insruments!</p>
 </center>
 <script>
 
