--- a/watch-ads.html
+++ b/watch-ads.html
@@ -16,9 +16,12 @@
 </div><br><br><br><br><br>
   <h3>Watch Ads!</h3>
   <p>It will say that you need to update your browser. It might say that 'your download is ready'.<br /><b>DO NOT CLICK START DOWNLOAD!!!</b><br />In the top left corner there will be a countdown. Wait until it's over, then click the yellow 'skip ad' button to collect your Ti Points.<br />If you love TI wait a bit longer than the countdown! We will make more money, and it all goes to Texas Insruments!</p>
+  <button onclick="watchAds">Watch Ads</button>
 </center>
 <script>
-
+  function watchAds() {
+	  window.location.href = "http://microify.com/1zrV";
+  }
 </script>
 </body>
 </html>
