--- a/watchads.html
+++ b/watchads.html
@@ -14,14 +14,20 @@
 	<a href="points.html"><img draggable=false id="money-icon" style="padding:50px;" width=50px src="money.png"></a>
 	<a href="settings.html"><img draggable=false id="gears-icon" style="padding:50px;" width=50px src="gears.png"></a>
 </div><br><br><br><br><br>
-  <h3>Watch Ads!</h3>
-  <p>It will say that you need to update your browser. It might say that 'your download is ready'.<br /><b>DO NOT CLICK START DOWNLOAD!!!</b><br />In the top left corner there will be a countdown. Wait until it's over, then click the yellow 'skip ad' button to collect your Ti Points.<br />If you love TI wait a bit longer than the countdown! We will make more money, and it all goes to Texas Insruments!</p>
-<button onclick="watchAds()">Watch Ads</button>
+  <h3>Watch Ads to Earn TiPoints!</h3>
+	<p><b>Disclaimer: </b>We are not responsible for any damage or harm done to anything. Some ads may link to viruses, so we suggest you <b>don't</b> click them.</p><br>
+	<a href="http://microify.com/1zrV"><button class="base btn">Earn 10 TiPoints</button></a><br>
+	<a href="http://bluenik.com/2k7U"><button class="base btn2">Earn 25 TiPoints</button></a><br>
+	<button onclick="shareLink()" class="">Earn 50 TiPoints</button>
 </center>
 <script>
-  function watchAds() {
-	  window.location.href="http://microify.com/1zrV";
-  }
+function shareLink() {
+	var r = confirm("Earn 50 TiPoints by signing up to AdFly! Click OK to continue.");
+	if (r == true) {
+		window.location.href = "https://join-adf.ly/16956779";
+	} else {
+		alert("You can always earn TiPoints by watching ads if you don't want to sign up.");
+}
 </script>
 </body>
 </html>
