--- a/watchads.html
+++ b/watchads.html
@@ -18,7 +18,7 @@
 	<p><b>Disclaimer: </b>We are not responsible for any damage or harm done to anything. Some ads may link to viruses, so we suggest you <b>don't</b> click them.</p><br>
 	<a href="http://microify.com/1zrV"><button class="base btn">Earn 10 TiPoints</button></a><br>
 	<a href="http://bluenik.com/2k7U"><button class="base btn2">Earn 25 TiPoints</button></a><br>
-	<button onclick="shareLink()" class="">Earn 50 TiPoints</button>
+	<button onclick="shareLink()" class="base btn2">Earn 50 TiPoints</button>
 </center>
 <script>
 function shareLink() {
@@ -27,6 +27,7 @@ function shareLink() {
 		window.location.href = "https://join-adf.ly/16956779";
 	} else {
 		alert("You can always earn TiPoints by watching ads if you don't want to sign up.");
+	}
 }
 </script>
 </body>
