--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
 </div>
 <script>	
 var logins = ["aHltZW5vcHVzOnRpZXI=", "aGVucnk6cG9ydA==", "Z3JhcGhpbmdoYW5kaGVsZDp0SQ==", "bmVpbDpjYXQ=", "aGF5ZGVuOnF3ZXJ0eQ==", "cmFlZjp0aQ==", "bmFjaG9jaGVlc2UyMDE3Om1jY29ybWljaw==", "dmlvaXNhbmVyZDp0aQ=="]
-var bannedusers = ["vioisanerd", "hayden"];
+var bannedusers = ["hayden"];
 var banreason = [""]
-var mutedusers = ["vioisanerd", "hayden"];
+var mutedusers = ["hayden"];
 var tracking = ["hayden"];
 var mods = ["hymenopus", "graphinghandheld", "hayden", "neil", "henry"];
   if (window.location.href == "https://timedia.netlify.com/" || window.location.href == "http://timedia.netlify.com/") {
