--- a/watchads.html
+++ b/watchads.html
@@ -17,11 +17,10 @@
   <h3>Watch Ads to Earn TiPoints!</h3>
 	<p><b>Disclaimer: </b>We are not responsible for any damage or harm done to anything. Some ads may link to viruses, so we suggest you <b>don't</b> click them.</p><br>
 	<a href="http://microify.com/1zrV"><button class="base btn">Earn 10 TiPoints</button></a><br>
-	<a href="http://bluenik.com/2k7U"><button class="base btn2">Earn 25 TiPoints</button></a><br>
-	<button onclick="shareLink()" class="base btn2">Earn 50 TiPoints</button>
+	<button onclick="get50Points()" class="base btn2">Earn 50 TiPoints</button>
 </center>
 <script>
-function shareLink() {
+function get50Points() {
 	var r = confirm("Earn 50 TiPoints by signing up to AdFly! Click OK to continue.");
 	if (r == true) {
 		window.location.href = "https://join-adf.ly/16956779";
