--- a/reward2.html
+++ b/reward2.html
@@ -18,6 +18,6 @@ function getCookie(cname) {
 }
 
 localStorage.points = Number(localStorage.points) + 25;
-window.location.href = "points.html";
+window.location.href = "watchads.html";
 </script>
 </html>
