--- a/watchads.html
+++ b/watchads.html
@@ -15,7 +15,7 @@
 	<a href="settings.html"><img draggable=false id="gears-icon" style="padding:50px;" width=50px src="gears.png"></a>
 </div><br><br><br><br><br>
   <h3>Watch Ads to Earn TiPoints!</h3>
-	<p><b>Disclaimer: </b>We are not responsible for any damage or harm done to anything. Some ads may link to viruses, so we suggest you <b>don't</b> click them.</p><br>
+	<p><b>Disclaimer: </b>We are not responsible for any damage or harm done to anything. Some ads may link to viruses, so we suggest you <b>don't</b> click them.<br/>It might say that you have an outdated browser o that 'your download is ready'.<b</p><br>
 	<a href="http://microify.com/1zrV"><button class="base btn">Earn 10 TiPoints</button></a><br>
 	<button onclick="get50Points()" class="base btn2">Earn 50 TiPoints</button>
 </center>
