--- a/news.html
+++ b/news.html
@@ -14,7 +14,7 @@
 	<a href="points.html"><img draggable=false id="money-icon" style="padding:50px;" width=50px src="money.png"></a>
 	<a href="settings.html"><img draggable=false id="gears-icon" style="padding:50px;" width=50px src="gears.png"></a>
 </div><br><br><br><br><br><br>
-	<b>Introducing</b> LIMITED EDITION Virtual TIs - buy them before they go offsale!<br>
+	<b>Introducing</b> LIMITED EDITION Virtual TIs - OFFSALE<br>
 	<b>New Admin</b> - neil now has partial ownership and editing rights to the website!
  </center>
  </body>
