--- a/settings.html
+++ b/settings.html
@@ -15,6 +15,12 @@
 	<a href="settings.html"><img draggable=false id="gears-icon" style="padding:50px;" width=50px src="gears.png"></a>
 </div><br><br><br><br><br>
 	<h3>Admins are still working on this page!</h3>
+	<form action="/action_page.php" method="get">
+  <input type="checkbox" name="status" value="VIT">VIT<br>
+  <input type="checkbox" name="status" value="MVT" checked>MVT<br>
+  <input type="checkbox" name="status" value="MVT+" checked>MVT+<br>
+  <input type="submit" value="Submit">
+        </form>
  </center>
  </body>
  <style>
