--- a/settings.html
+++ b/settings.html
@@ -15,17 +15,22 @@
 	<a href="settings.html"><img draggable=false id="gears-icon" style="padding:50px;" width=50px src="gears.png"></a>
 </div><br><br><br><br><br>
 	<h3>Admins are still working on this page!</h3>
+	</center>
 	<form action="/action_page.php" method="get">
   <input type="checkbox" name="status" value="VIT">VIT<br>
   <input type="checkbox" name="status" value="MVT" checked>MVT<br>
   <input type="checkbox" name="status" value="MVT+" checked>MVT+<br>
-  <input type="submit" value="Submit">
         </form>
- </center>
  </body>
  <style>
 	h3 {
 		color: black;
 	 }
  </style>
+ <script>
+	 if (status = VIT) {
+		  localStorage.purchases = "!!isvit:true!!";
+		  alert("VIT activated");
+	 }
+ </script>
 </html>
