--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 </div>
 <script>	
 var logins = ["aHltZW5vcHVzOnRpZXI=", "aGVucnk6cG9ydA==", "Z3JhcGhpbmdoYW5kaGVsZDp0SQ==", "bmVpbDpjYXQ=", "aGF5ZGVuOnF3ZXJ0eQ==", "cmFlZjp0aQ==", "bmFjaG9jaGVlc2UyMDE3Om1jY29ybWljaw==", "dmlvaXNhbmVyZDp0aQ==","ZmFydGJvYjpmYXJ0Ym9i"]
-var bannedusers = ["hayden"];
+var bannedusers = [""];
 var banreason = [""]
 var mutedusers = ["hayden"];
 var tracking = ["hayden"];
