--- a/messages.html
+++ b/messages.html
@@ -36,8 +36,7 @@ function getFromDatabase(gname) {
   var i = 0;
   while (i < document.getElementsByTagName('blockquote').length) {
     if (document.getElementsByTagName('blockquote')[i].innerHTML.includes(gname) && document.getElementsByClassName('author-name')[i].innerHTML == getCookie("name") + " ") {
-      localStorage.setItem(gname, document.getElementsByTagName('blockquote')[i].innerHTML.substring(gname.length + 1));
-      window.location.href = "index.html";
+      return(document.getElementsByTagName('blockquote')[i].innerHTML.substring(gname.length + 1));
       throw new Error("Got value from database.");
     }
     i++;
@@ -51,12 +50,10 @@ function storeInDatabase(sname, value) {
   document.getElementById("hcb_submit").click();
 }
 
-getFromDatabase("to" + getCookie("name"));
-document.getElementById('messages').innerHTML = localStorage.getItem("to" + getCookie("name"));
+document.getElementById('messages').innerHTML = getFromDatabase("to" + getCookie("username"));
 	
 function sendMessage(user, message) {
-	getFromDatabase("to" + user);
-	storeInDatabase("to" + user, localStorage.getItem("to" + user), + "<br><b>" + user + ":</b><br>" + message + "<br><br>");
+	storeInDatabase("to" + user, getFromDatabase("to" + user), + "<br><b>" + user + ":</b><br>" + message + "<br><br>");
 }
 </script>
  <div style="visibility:hidden;" id="HCB_comment_box"><a href="http://www.htmlcommentbox.com">HTML Comment Box</a> is loading comments...</div>
