--- a/messages.html
+++ b/messages.html
@@ -15,7 +15,7 @@
 	<a href="settings.html"><img draggable=false id="gears-icon" style="padding:50px;" width=50px src="gears.png"></a>
 </div><br><br><br><br><br><br>
 	<div id="messages">No messages!</div><br>
-	<button style="base btn2">Send Message</button>
+	<button onclick="sendMessage(prompt('User:'), prompt('Message:'))" style="base btn2">Send Message</button>
 <script>
 function getCookie(cname) {
   var name = cname + "=";
