--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	<a href="news.html"><img draggable=false id="news-icon" style="padding:50px;" width=50px src="news.png"></a>
 	<a href="points.html"><img draggable=false id="money-icon" style="padding:50px;" width=50px src="money.png"></a>
 	<a href="settings.html"><img draggable=false id="gears-icon" style="padding:50px;" width=50px src="gears.png"></a>
-	<a href="messages.html"><img draggeble=flase id="messaging-icon" style="padding:50px;" width=50px src="http://idge.staticworld.net/images/mail.svg"></a>
+	<a href="messages.html"><img draggeble=flase id="messaging-icon" style="padding:50px;" width=50px src=""></a>
 </div><br><br><br><br><br>
  <h1 id="hello">Hello!</h1><button onclick="logOut()" class="base btn">Log Out</button>
 <p id="modpanelnotice"></p>
