--- a/news.html
+++ b/news.html
@@ -13,6 +13,7 @@
 	<a href="news.html"><img draggable=false id="news-icon" style="padding:50px;" width=50px src="news.png"></a>
 	<a href="points.html"><img draggable=false id="money-icon" style="padding:50px;" width=50px src="money.png"></a>
 	<a href="settings.html"><img draggable=false id="gears-icon" style="padding:50px;" width=50px src="gears.png"></a>
+	<a href="messages.html"><img draggable=false id="gears-icon" style="padding:50px;" width=50px src="timage.svg"></a>
 </div><br><br><br><br><br><br>
 	<b>New Update!</b> - Private Messages coming soon!<br>
  </center>
