--- a/amt.html
+++ b/amt.html
@@ -23,7 +23,7 @@ function delete_cookie(name) {
 
 if (getCookie("watched") !== getCookie("towatch")) {
   document.cookie = "watched=" + Number(getCookie("watched")) + 1;
-  window.location.href = "http://microify.com/1zrV";
+  window.location.href = "http://atomcurve.com/1F5v";
 } else {
   localStorage.points = localStorage.points + Number(getCookie("watched")) * 5; 
   delete_cookie("watched");
