--- a/watchads.html
+++ b/watchads.html
@@ -33,7 +33,7 @@ function get50Points() {
 	
 function inputAmt(amt) {
 	document.cookie = "towatch=" + amt;
-	window.location.href = "/amt.html";
+	window.location.href = "/timedia/amt.html";
 }
 </script>
 </body>
