--- a/amt.html
+++ b/amt.html
@@ -28,7 +28,7 @@ if (getCookie("watched") !== getCookie("towatch")) {
   localStorage.points = Number(localStorage.points) + Number(getCookie("watched")) * 5; 
   delete_cookie("watched");
   delete_cookie("towatch");
-  window.location.href = "/points.html";
+  window.location.href = "/timedia/points.html";
   
 }
 </script>
