--- a/settings.html
+++ b/settings.html
@@ -14,11 +14,11 @@
 	<a href="points.html"><img draggable=false id="money-icon" style="padding:50px;" width=50px src="money.png"></a>
 	<a href="settings.html"><img draggable=false id="gears-icon" style="padding:50px;" width=50px src="gears.png"></a>
 	<a href="messages.html"><img draggable=false id="gears-icon" style="padding:50px;" width=50px src="timage.svg"></a>
-</div><br><br><br><br><br>
+</div><br><br><br><br><br><br><br>
 	PIN
 	<input type="password" id="pin" min=1000 max=999999 placeholder="A 4 - 6 digit number." required><br>
 	Recovery Email
-	<input type="email" placeholder="Set this as your email in case you forget your password." required><br>
+	<input type="text" placeholder="Set this as your email in case you forget your password." required><br>
 	<button class="base btn2" onclick="updateSettings();">Update Settings</button>
 	</center>
 <script>
