--- a/settings.html
+++ b/settings.html
@@ -18,7 +18,7 @@
 	PIN
 	<input type="password" id="pin" min=1000 max=999999 placeholder="A 4 - 6 digit number." required><br>
 	Recovery Email
-	<input type="text" placeholder="Set this as your email in case you forget your password." required><br>
+	<input type="text" placeholder="In case you forget your password." required><br>
 	<button class="base btn2" onclick="updateSettings();">Update Settings</button>
 	</center>
 <script>
