--- a/settings.html
+++ b/settings.html
@@ -42,11 +42,12 @@ if (getCookie("gotsettings") !== "true") {
 		document.cookie = "getsettings=true";
 		window.location = "/timedia/sync.html";	
 } else {
-	alert(localStorage.settings);
+	document.getElementById('pin').value = localStorage.settings.split(":")[0];
+	document.getElementById('remail').value = localStorage.settings.split(":")[1];
 }
 	function updateSettings() {
 		document.cookie = "thesettings=" + document.getElementById('pin').value + ":" + document.getElementById('remail').value;
-		localStorage.settings = "PIN:Recovery Email " + getCookie('thesettings')
+		localStorage.settings = getCookie('thesettings')
 		document.cookie = "updatesettings=true";
 		window.location.href = "sync.html";
 	}
