--- a/settings.html
+++ b/settings.html
@@ -14,7 +14,7 @@
 	<a href="points.html"><img draggable=false id="money-icon" style="padding:50px;" width=50px src="money.png"></a>
 	<a href="settings.html"><img draggable=false id="gears-icon" style="padding:50px;" width=50px src="gears.png"></a>
 	<a href="messages.html"><img draggable=false id="gears-icon" style="padding:50px;" width=50px src="timage.svg"></a>
-</div><br><br><br><br><br><br><br>
+</div><br><br><br><br><br><br>
 	PIN
 	<input type="password" id="pin" min=1000 max=999999 placeholder="A 4 - 6 digit number." required><br>
 	Recovery Email
