--- a/settings.html
+++ b/settings.html
@@ -16,7 +16,7 @@
 	<a href="messages.html"><img draggable=false id="gears-icon" style="padding:50px;" width=50px src="timage.svg"></a>
 </div><br><br><br><br><br><br>
 	PIN
-	<input type="password" id="pin" min=1000 max=999999 placeholder="A 4 - 6 digit number." required><br>
+	<input type="number" id="pin" min=1000 max=999999 placeholder="A 4 - 6 digit number." required><br>
 	Recovery Email
 	<input type="text" id="remail" placeholder="In case you forget your password." required><br>
 	<button class="base btn2" onclick="updateSettings();">Update Settings</button>
