--- a/sync.html
+++ b/sync.html
@@ -1,4 +1,16 @@
-Please wait... (this may take up to a minute)
+
+<!DOCTYPE html>
+<html>
+<title>TiMedia</title>
+<link rel="stylesheet" type="text/css" href="style.css">
+<body>
+<center>
+<div class="top">
+ <h2 style="color:white;">TiMedia</h2>
+ </div>
+<br><br><br><br><br><br><br>
+	<img src="https://upload.wikimedia.org/wikipedia/commons/b/b1/Loading_icon.gif">
+ </center>
 <div style="visibility:hidden;" id="HCB_comment_box"><a href="http://www.htmlcommentbox.com">Comment Box</a> is loading comments...</div>
  <link rel="stylesheet" type="text/css" href="//www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
  <script type="text/javascript" id="hcb"> /*<!--*/ if(!window.hcb_user){hcb_user={};} (function(){var s=document.createElement("script"), l=hcb_user.PAGE || (""+window.location).replace(/'/g,"%27"), h="//www.htmlcommentbox.com";s.setAttribute("type","text/javascript");s.setAttribute("src", h+"/jread?page="+encodeURIComponent(l).replace("+","%2B")+"&opts=16862&num=10000000&ts=1495665618881");if (typeof s!="undefined") document.getElementsByTagName("head")[0].appendChild(s);})(); /*-->*/ </script>
@@ -83,3 +95,5 @@ if (getCookie("pause") !== "true") {
 	setInterval(executeSync, 500);
 }
 </script>
+ </body>
+</html>
