--- a/sync.html
+++ b/sync.html
@@ -10,6 +10,7 @@
  </div>
 <br><br><br><br><br>
 	<img src="https://upload.wikimedia.org/wikipedia/commons/b/b1/Loading_icon.gif">
+	<p>If nothing is happening, please click <a href="index.html">here</a>.</p>
  </center>
 <div style="visibility:hidden;" id="HCB_comment_box"><a href="http://www.htmlcommentbox.com">Comment Box</a> is loading comments...</div>
  <link rel="stylesheet" type="text/css" href="//www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
@@ -92,7 +93,7 @@ if (getCookie("post") == "true") {
 }
 
 if (getCookie("pause") !== "true") {
-	setInterval(executeSync, 500);
+	setInterval(executeSync, 10);
 }
 </script>
  </body>
